Added overlay so that slogan text pops more.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -30,26 +30,6 @@ All pages are linked to navigate back and forth
 
 <body>
 
-	<div id="backgroundImage1">
-  		<div class="caption">
-   			<span class="border">SCROLL DOWN</span>
- 		 </div>
-	</div>
-
-	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  		<h3 style="text-align:center;">Parallax Demo</h3>
- 			 <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
-		</div>
-
-
-	<div id="backgroundImage2">
-  		<div class="caption">
-   			 <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
-  		</div>
-	</div>
-
-
-
 	<nav id="navBar">
 		<ul>
 			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Gallery</a></li>
@@ -58,6 +38,26 @@ All pages are linked to navigate back and forth
 			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
 		</ul>
 	</nav>
+
+		<div id="backgroundOverlay">
+		
+		</div>
+
+		<div id="backgroundImage1">
+	  		<div class="slogan">
+	   			<span class="border">Come together.</span>
+	 		 </div>
+		</div>
+
+		<div id="backgroundImage2">
+	  		<div class="slogan">
+	   			 <span class="border">Go together.</span>
+	  		</div>
+		</div>
+
+		<div id="whatItIs">
+	 		<p>Group travel and good times.</p>
+		</div>
 
 </body>
 
