Added content and bottom image. Need to remove overlay from content div.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -26,21 +26,25 @@ All pages are linked to navigate back and forth
 	<link rel="stylesheet" type="text/css" href="Styles/JSAboutMe_Style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- NEED HELP WITH THIS?! Adding social buttons. 	
+	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../bootstrap-social-gh-pages/bootstrap-social.css">  -->
+
 </head>
 
 <body>
 
 	<nav id="navBar">
 		<ul>
-			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Gallery</a></li>
-			<li><a href="http://rallyaway.com" target="_blank">Website</a></li>
+			<li><a href="http://rallyaway.com" target="_blank">Rally Away</a></li>
+			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Good Times</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
 		</ul>
 	</nav>
 
 		<div id="backgroundOverlay">
-		
 		</div>
 
 		<div id="backgroundImage1">
@@ -55,9 +59,16 @@ All pages are linked to navigate back and forth
 	  		</div>
 		</div>
 
-		<div id="whatItIs">
-	 		<p>Group travel and good times.</p>
+		<div id="content">
+	 		<p id="title">GOOD TIMES + GOOD PEOPLE.</p><br>
+	 		<p class="subtitle">Rally Away is a travel network and group trip planning servce.
+	 		</p><br>
+	 		<p class="subtitle">Rally to hang with old friends, meet new friends, get away from home, and explore more.</p><br>
 		</div>
+
+		<div id="backgroundImage3">
+		</div>
+
 
 </body>
 
