Adjusted nav bar so that Rally Away is no longer a part of it

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -34,10 +34,12 @@ All pages are linked to navigate back and forth
 </head>
 
 <body>
+	<div id="siteTitle">
+		<a href="http://rallyaway.com" target="_blank">Rally Away</a>
+	</div>
 
 	<nav id="navBar">
 		<ul>
-			<li><a href="http://rallyaway.com" target="_blank">Rally Away</a></li>
 			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Good Times</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
