Added nav bar to image gallery. Recreated image gallery. Still working on centering, then need to redo @media sizing

--- a/JSAboutMe_ImageGallery.html
+++ b/JSAboutMe_ImageGallery.html
@@ -13,24 +13,54 @@ Images resize when screen size is adjusted -->
 <html>
 
 <head>
-	<title> Gallery </title>
+	<title>Good Times</title>
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
-	<link rel="stylesheet" type="text/css" href="Styles/ImageGallery_Style.css">
+
+	<link rel="stylesheet" type="text/css" href="Styles/imageGallery_style2.css">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="Styles/bootstrap.min.css">
 </head>
 
 <body>
 
-	<div id="container">
-		<div id="gallery">
-			<div id="barn" class="images"></div>
-			<div id="whiteSands" class="images"></div>
-			<div id="bonnaroo" class="images"></div>
-			<div id="arches" class="images"></div>
-			<div id="newport" class="images"></div>
-			<div id="haystack" class="images"></div>
-		</div>
 
+	<div id="siteTitle2">
+		<a href="http://rallyaway.com" target="_blank">Rally Away</a>
+	</div>
+
+	<nav id="navBar2">
+		<ul>
+			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Good Times</a></li>
+			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
+			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
+		</ul>
+	</nav>
+
+	<div id="gallery">
+		<!-- <div id="row1">  -->
+			<div class="imageContainer">
+				<img src="Images/Arches.jpg" class="images"> 
+			</div>
+			<div class="imageContainer">
+				<img src="Images/Haystack.jpg" class="images"> 
+			</div>
+			<div class="imageContainer">
+				<img src="Images/Barn.jpg" class="images"> 
+			</div>
+		<!-- </div> -->
+		<!-- <div id="row2">  -->
+			<div class="imageContainer">
+				<img src="Images/WhiteSands.jpg" class="images"> 
+			</div>
+			<div class="imageContainer">
+				<img src="Images/Bonnaroo.jpg" class="images"> 
+			</div>
+			<div class="imageContainer">
+				<img src="Images/Newport.jpg" class="images"> 
+			</div>
+		<!-- </div> -->
 	</div>
 
 </body>
