Adjusted image gallery layout. Need to fix responsiveness.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -40,7 +40,7 @@ All pages are linked to navigate back and forth
 
 	<nav id="navBar">
 		<ul>
-			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Good Times</a></li>
+			<li><a href="JSAboutMe_ImageGallery.html">Good Times</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
 		</ul>
