--- a/JSAboutMe_ImageGallery.html
+++ b/JSAboutMe_ImageGallery.html
@@ -32,35 +32,54 @@ Images resize when screen size is adjusted -->
 
 	<nav id="navBar2">
 		<ul>
-			<li><a href="JSAboutMe_ImageGallery.html" target="_blank">Good Times</a></li>
+			<li><a href="JSAboutMe.html">Home</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
 		</ul>
 	</nav>
 
+	<div id="pageTitle">
+		<span class="border">Good times.</span>
+	</div>
+
 	<div id="gallery">
-		<!-- <div id="row1">  -->
+		<div id="galleryContainer">
 			<div class="imageContainer">
-				<img src="Images/Arches.jpg" class="images"> 
+				<a href="http://www.rallyaway.com/gallery/southwest" target="_blank">
+					<img src="Images/Arches.jpg" class="images">
+				</a> 
 			</div>
+
 			<div class="imageContainer">
-				<img src="Images/Haystack.jpg" class="images"> 
+				<a href="http://www.rallyaway.com/gallery/pnw" target="_blank">
+					<img src="Images/Haystack.jpg" class="images"> 
+				</a>
 			</div>
+
 			<div class="imageContainer">
-				<img src="Images/Barn.jpg" class="images"> 
+				<a href="http://www.rallyaway.com/gallery/barntime" target="_blank"> 
+					<img src="Images/Barn.jpg" class="images"> 
+				</a>
 			</div>
-		<!-- </div> -->
-		<!-- <div id="row2">  -->
+
 			<div class="imageContainer">
-				<img src="Images/WhiteSands.jpg" class="images"> 
+				<a href="http://www.rallyaway.com/gallery/9000miles" target="_blank">
+					<img src="Images/WhiteSands.jpg" class="images">
+				</a>
 			</div>
+
 			<div class="imageContainer">
-				<img src="Images/Bonnaroo.jpg" class="images"> 
+				<a href="http://www.rallyaway.com/gallery/rallybeacon" target="_blank">
+					<img src="Images/Beacon2.jpg" class="images"> 
+				</a>
 			</div>
+
 			<div class="imageContainer">
-				<img src="Images/Newport.jpg" class="images"> 
+				<a href="http://www.rallyaway.com/gallery/newport16" target="_blank">
+					<img src="Images/Newport.jpg" class="images"> 
+				</a>
 			</div>
-		<!-- </div> -->
+		</div>
 	</div>
 
 </body>
