Added responsiveness, but it's pretty wonky.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -46,6 +46,7 @@ All pages are linked to navigate back and forth
 		</ul>
 	</nav>
 
+		<!-- NEED TO REMOVE THIS FROM 'TEXT AREA' -->
 		<div id="backgroundOverlay">
 		</div>
 
@@ -63,7 +64,7 @@ All pages are linked to navigate back and forth
 
 		<div id="content">
 	 		<p id="title">GOOD TIMES + GOOD PEOPLE.</p><br>
-	 		<p class="subtitle">Rally Away is a travel network and group trip planning servce.
+	 		<p class="subtitle">Rally Away is a travel network and group trip planning service.
 	 		</p><br>
 	 		<p class="subtitle">Rally to hang with old friends, meet new friends, get away from home, and explore more.</p><br>
 		</div>
