Created 3rd page

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -41,8 +41,8 @@ All pages are linked to navigate back and forth
 	<nav id="navBar">
 		<ul>
 			<li><a href="JSAboutMe_ImageGallery.html">Good Times</a></li>
+			<li><a href="JSAboutMe_Upcoming.html">Let's Get Away</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
-			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
 		</ul>
 	</nav>
 
