--- a/JSAboutMe_ImageGallery.html
+++ b/JSAboutMe_ImageGallery.html
@@ -33,8 +33,9 @@ Images resize when screen size is adjusted -->
 	<nav id="navBar2">
 		<ul>
 			<li><a href="JSAboutMe.html">Home</a></li>
+			<li><a href="JSAboutMe_Upcoming.html">Let's Get Away</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
-			<li><a href="http://facebook.com/groups/rallyaway" target="_blank">Facebook</a></li>
+			
 		</ul>
 	</nav>
 
