Finally figured out the overlay issue with the content box on the home page. Note to self: need to add responsiveness to home page.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -63,10 +63,13 @@ All pages are linked to navigate back and forth
 		</div>
 
 		<div id="content">
-	 		<p id="title">GOOD TIMES + GOOD PEOPLE.</p><br>
-	 		<p class="subtitle">Rally Away is a travel network and group trip planning service.
-	 		</p><br>
-	 		<p class="subtitle">Rally to hang with old friends, meet new friends, get away from home, and explore more.</p><br>
+				<hr style="width: 750px">
+		 		<p id="contentTitle">GOOD TIMES + GOOD PEOPLE.</p><br>
+		 		<p class="contentSubtitle">Rally Away is a travel network and group trip planning service.
+		 		</p><br>
+		 		<p class="contentSubtitle">Rally to hang with old friends, meet new friends, get away from home, and explore more.</p><br>
+		 		<hr style ="width: 700px">
+
 		</div>
 
 		<div id="backgroundImage3">
