Created template for third page aka Upcoming Trips aka Let's Get Away. Also added hover effects for Good Times images.

--- a/JSAboutMe_ImageGallery.html
+++ b/JSAboutMe_ImageGallery.html
@@ -18,6 +18,9 @@ Images resize when screen size is adjusted -->
 
 	<link rel="stylesheet" type="text/css" href="Styles/imageGallery_style2.css">
 
+	<link rel="stylesheet" type"text/css" href="Styles/hover.css">
+
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -46,37 +49,37 @@ Images resize when screen size is adjusted -->
 	<div id="gallery">
 		<div id="galleryContainer">
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/southwest" target="_blank">
+				<a href="http://www.rallyaway.com/gallery/southwest" target="_blank" class="hvr-ripple-in">
 					<img src="Images/Arches.jpg" class="images">
 				</a> 
 			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/pnw" target="_blank">
+				<a href="http://www.rallyaway.com/gallery/pnw" target="_blank" class="hvr-ripple-in">
 					<img src="Images/Haystack.jpg" class="images"> 
 				</a>
 			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/barntime" target="_blank"> 
+				<a href="http://www.rallyaway.com/gallery/barntime" target="_blank" class="hvr-ripple-in"> 
 					<img src="Images/Barn.jpg" class="images"> 
 				</a>
 			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/9000miles" target="_blank">
+				<a href="http://www.rallyaway.com/gallery/9000miles" target="_blank" class="hvr-ripple-in">
 					<img src="Images/WhiteSands.jpg" class="images">
 				</a>
 			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/rallybeacon" target="_blank">
+				<a href="http://www.rallyaway.com/gallery/rallybeacon" target="_blank" class="hvr-ripple-in">
 					<img src="Images/Beacon2.jpg" class="images"> 
 				</a>
 			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/newport16" target="_blank">
+				<a href="http://www.rallyaway.com/gallery/newport16" target="_blank" class="hvr-ripple-in">
 					<img src="Images/Newport.jpg" class="images"> 
 				</a>
 			</div>
