--- a/JSAboutMe_Upcoming.html
+++ b/JSAboutMe_Upcoming.html
@@ -7,6 +7,8 @@
 
 	<link rel="stylesheet" type="text/css" href="Styles/upcoming_style.css">
 
+	<link rel="stylesheet" type"text/css" href="Styles/hover.css">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -27,6 +29,53 @@
 
 	<div id="pageTitle">
 		<span class="border">Let's get away.</span>
+	</div>
+
+	<div id="tripGallery">
+		<div id="galleryContainer">
+			<div class="tripContainer">
+				<a href="http://www.rallyaway.com" class="hvr-ripple-in">
+					<img src="http://placehold.it/300x300">
+				</a>
+
+				<div class="tripText">
+					<br><a href="http://www.rallyaway.com">TRIP TITLE</a><br><br>
+					Where: <br>
+					When: <br>
+					Who: <br>
+					How: 
+				</div>
+			</div>
+
+			<div class="tripContainer">
+				<a href="http://www.rallyaway.com" class="hvr-ripple-in">
+					<img src="http://placehold.it/300x300">
+				</a>
+				
+				<div class="tripText">
+					<br><a href="http://www.rallyaway.com">TRIP TITLE</a><br><br>
+					Where: <br>
+					When: <br>
+					Who: <br>
+					How: 
+				</div>
+			</div>
+
+			<div class="tripContainer"> 
+				<a href="http://www.rallyaway.com" class="hvr-ripple-in">
+					<img src="http://placehold.it/300x300">
+				</a>
+				
+				<div class="tripText"> <!-- Why won't styling work when this is a p tag? -->
+					<br><a href="http://www.rallyaway.com">TRIP TITLE</a><br><br>
+					Where: <br>
+					When: <br>
+					Who: <br>
+					How: 
+				</div>
+			</div>
+
+		</div>
 	</div>
 
 </body>
