Added some responsiveness to Lets Get Away page.

--- a/JSAboutMe_Upcoming.html
+++ b/JSAboutMe_Upcoming.html
@@ -35,7 +35,7 @@
 		<div id="galleryContainer">
 			<div class="tripContainer">
 				<a href="http://www.rallyaway.com" class="hvr-ripple-in">
-					<img src="http://placehold.it/300x300">
+					<img src="http://placehold.it/300x300" class="images">
 				</a>
 
 				<div class="tripText">
@@ -49,9 +49,9 @@
 
 			<div class="tripContainer">
 				<a href="http://www.rallyaway.com" class="hvr-ripple-in">
-					<img src="http://placehold.it/300x300">
+					<img src="http://placehold.it/300x300" class="images">
 				</a>
-				
+
 				<div class="tripText">
 					<br><a href="http://www.rallyaway.com">TRIP TITLE</a><br><br>
 					Where: <br>
@@ -63,7 +63,7 @@
 
 			<div class="tripContainer"> 
 				<a href="http://www.rallyaway.com" class="hvr-ripple-in">
-					<img src="http://placehold.it/300x300">
+					<img src="http://placehold.it/300x300" class="images">
 				</a>
 				
 				<div class="tripText"> <!-- Why won't styling work when this is a p tag? -->
