Updated responsiveness on Good Times and Let's Get Away.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -21,7 +21,7 @@ All pages are linked to navigate back and forth
 <html>
 
 <head>
-	<title> About Me </title>
+	<title>Rally Away</title>
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
 	<link rel="stylesheet" type="text/css" href="Styles/JSAboutMe_Style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
