Adjusted mobile version of Lets Get Away page.

--- a/JSAboutMe_Upcoming.html
+++ b/JSAboutMe_Upcoming.html
@@ -1,3 +1,19 @@
+<!-- 
+Your final project will be your chance to shine and showcase all your new web development skills! This web app will be something you can show friends, family and employers. You will be presenting to your class on the last day but beyond that feel free to keep working and adding to it!
+
+You can take a project that you've been working on in class or a website of your own. You can work on this project by yourself or form teams of no more than 3 people.
+
+You should try using Git + Github, either in teams or by yourself, to track issues, suggest feature enhancements and ideas, and iterate over your in-progress software. Keep track of your progress using Git. Make at least 6-10 commits as your project progresses. You don't need to make a commit for every single minor change, but instead for each set of changes that adds to your website, or "feature". Also a commit before almost any code is written, your "initial commit". This isn't a requirement, but it's good practice to use version control when working on any project.
+
+Grading Requirements:
+
+Make it responsive! Have a desktop version and a mobile version at the very least, if you have time try and make a tablet version.
+
+Add at least one type of JavaScript or jQuery function to every page of your site.
+
+Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
