All pages are now responsive and mobile friendly! Need to figure out nav bar situation in mobile version however. At the moment, can't cycle through pages in mobile...oops.

--- a/JSAboutMe.html
+++ b/JSAboutMe.html
@@ -3,19 +3,20 @@
 <!-- 
 Assignment:
 
-This assignment will be the finished and polished version of what you've been working on so far! You already started your "About Me" and "Images" pages of your personal website. Now it is time to polish those two and add one more! This third page will be your choice. You can create a blog page, contact me page or something else that inspires you. It should carry over the same style choices you made in the first two pages. Make sure you add navigation links so that you can navigate to and from each page easily. The final product will be your first website!
+Your final project will be your chance to shine and showcase all your new web development skills! This web app will be something you can show friends, family and employers. You will be presenting to your class on the last day but beyond that feel free to keep working and adding to it!
 
-The other part of this assignment is to utilize git as you work. From start to finish you should be making multiple commits. Think about if you've ever had to write a long paper, as you wrote you would reach points and think "this is a good place to save". Continue that thinking with this project. As you write HTML/CSS be sure to "save" your work with git and GitHub.
+You can take a project that you've been working on in class or a website of your own. You can work on this project by yourself or form teams of no more than 3 people.
 
-Grading criteria:
+You should try using Git + Github, either in teams or by yourself, to track issues, suggest feature enhancements and ideas, and iterate over your in-progress software. Keep track of your progress using Git. Make at least 6-10 commits as your project progresses. You don't need to make a commit for every single minor change, but instead for each set of changes that adds to your website, or "feature". Also a commit before almost any code is written, your "initial commit". This isn't a requirement, but it's good practice to use version control when working on any project.
 
-HTML/CSS is formatted and linked properly
-At least one additional content page is added
-About Me page has updated styling
-6-10 commits showing progress
-GitHub repository is properly set up
-All files are in one project folder
-All pages are linked to navigate back and forth
+Grading Requirements:
+
+Make it responsive! Have a desktop version and a mobile version at the very least, if you have time try and make a tablet version.
+
+Add at least one type of JavaScript or jQuery function to every page of your site.
+
+Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
+
 -->
 
 <html>
@@ -63,12 +64,12 @@ All pages are linked to navigate back and forth
 		</div>
 
 		<div id="content">
-				<hr style="width: 750px">
+				<hr id="line1">
 		 		<p id="contentTitle">GOOD TIMES + GOOD PEOPLE.</p><br>
-		 		<p class="contentSubtitle">Rally Away is a travel network and group trip planning service.
+		 		<p id="contentSubtitle1">Rally Away is a travel network and group trip planning service.
 		 		</p><br>
-		 		<p class="contentSubtitle">Rally to hang with old friends, meet new friends, get away from home, and explore more.</p><br>
-		 		<hr style ="width: 700px">
+		 		<p id="contentSubtitle2">Rally to hang with old friends, meet new friends, get away from home, and explore more.</p><br>
+		 		<hr id="line2">
 
 		</div>
 
