--- a/JSAboutMe_ImageGallery.html
+++ b/JSAboutMe_ImageGallery.html
@@ -1,13 +1,19 @@
 <!-- 
 
-This assignment will be the second page of your personal website you started! Remember the first page was your "About Me". Now that you've gained skills in page layout and responsive design feel free to update what you've created so far. For this assignment you will be adding an image gallery. This page will be soley devoted to images. Since you've learned about page layout and responsiveness you will format these images to look like a gallery. This should something like a grid formation. To ensure it is mobile responsive adjust the size of your screen to double check the images resize to fit the screen.
+Your final project will be your chance to shine and showcase all your new web development skills! This web app will be something you can show friends, family and employers. You will be presenting to your class on the last day but beyond that feel free to keep working and adding to it!
 
-Grading criteria:
+You can take a project that you've been working on in class or a website of your own. You can work on this project by yourself or form teams of no more than 3 people.
 
-HTML properly formatted and indented correctly
-CSS is properly formatted and linked to an external stylesheet
-Includes multiple images and all linked correctly
-Images resize when screen size is adjusted -->
+You should try using Git + Github, either in teams or by yourself, to track issues, suggest feature enhancements and ideas, and iterate over your in-progress software. Keep track of your progress using Git. Make at least 6-10 commits as your project progresses. You don't need to make a commit for every single minor change, but instead for each set of changes that adds to your website, or "feature". Also a commit before almost any code is written, your "initial commit". This isn't a requirement, but it's good practice to use version control when working on any project.
+
+Grading Requirements:
+
+Make it responsive! Have a desktop version and a mobile version at the very least, if you have time try and make a tablet version.
+
+Add at least one type of JavaScript or jQuery function to every page of your site.
+
+Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
+ -->
 
 <!DOCTYPE html>
 <html>
