Temp fix for the nav bar situation. Made a vertically stacked menu for the home page in smaller windows, and then linked the Rally Away title on the other two pages back to the home page, instead of to the Squarespace.

--- a/JSAboutMe_ImageGallery.html
+++ b/JSAboutMe_ImageGallery.html
@@ -21,12 +21,8 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 <head>
 	<title>Good Times</title>
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
-
 	<link rel="stylesheet" type="text/css" href="Styles/imageGallery_style2.css">
-
 	<link rel="stylesheet" type"text/css" href="Styles/hover.css">
-
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -36,14 +32,14 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 
 
 	<div id="siteTitle2">
-		<a href="http://rallyaway.com" target="_blank">Rally Away</a>
+		<a href="JSAboutMe.html">Rally Away</a>
 	</div>
 
 	<nav id="navBar2">
 		<ul>
 			<li><a href="JSAboutMe.html">Home</a></li>
-			<li><a href="JSAboutMe_Upcoming.html">Let's Get Away</a></li>
-			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
+			<li class="notHome"><a href="JSAboutMe_Upcoming.html">Let's Get Away</a></li>
+			<li class="notHome"><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			
 		</ul>
 	</nav>
