--- a/JSAboutMe_Upcoming.html
+++ b/JSAboutMe_Upcoming.html
@@ -20,18 +20,16 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 	<title>Upcoming Trips</title>
 
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
-
 	<link rel="stylesheet" type="text/css" href="Styles/upcoming_style.css">
-
 	<link rel="stylesheet" type"text/css" href="Styles/hover.css">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
 
 	<div id="siteTitle2">
-		<a href="http://rallyaway.com" target="_blank">Rally Away</a>
+		<a href="JSAboutMe.html">Rally Away</a>
 	</div>
 
 	<nav id="navBar2">
