Renamed folder and pages to fit Rally Away content.

--- a/pastTrips.html
+++ b/pastTrips.html
@@ -21,7 +21,7 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 <head>
 	<title>Good Times</title>
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
-	<link rel="stylesheet" type="text/css" href="Styles/imageGallery_style2.css">
+	<link rel="stylesheet" type="text/css" href="Styles/pastTrips_style.css">
 	<link rel="stylesheet" type"text/css" href="Styles/hover.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,8 +37,8 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 
 	<nav id="navBar2">
 		<ul>
-			<li><a href="JSAboutMe.html">Home</a></li>
-			<li class="notHome"><a href="JSAboutMe_Upcoming.html">Let's Get Away</a></li>
+			<li><a href="rallyHome.html">Home</a></li>
+			<li class="notHome"><a href="upcomingTrips.html">Let's Get Away</a></li>
 			<li class="notHome"><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			
 		</ul>
