--- a/rallyHome.html
+++ b/rallyHome.html
@@ -24,7 +24,7 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 <head>
 	<title>Rally Away</title>
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
-	<link rel="stylesheet" type="text/css" href="Styles/JSAboutMe_Style.css">
+	<link rel="stylesheet" type="text/css" href="Styles/rallyHome_style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- NEED HELP WITH THIS?! Adding social buttons. 	
@@ -41,8 +41,8 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 
 	<nav id="navBar">
 		<ul>
-			<li><a href="JSAboutMe_ImageGallery.html">Good Times</a></li>
-			<li><a href="JSAboutMe_Upcoming.html">Let's Get Away</a></li>
+			<li><a href="pastTrips.html">Good Times</a></li>
+			<li><a href="upcomingTrips.html">Let's Get Away</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 		</ul>
 	</nav>
