--- a/upcomingTrips.html
+++ b/upcomingTrips.html
@@ -20,7 +20,7 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 	<title>Upcoming Trips</title>
 
 	<link rel="stylesheet" type="text/css" href="../EricMeyerReset.css"> 
-	<link rel="stylesheet" type="text/css" href="Styles/upcoming_style.css">
+	<link rel="stylesheet" type="text/css" href="Styles/upcomingTrips_style.css">
 	<link rel="stylesheet" type"text/css" href="Styles/hover.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,8 +34,8 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 
 	<nav id="navBar2">
 		<ul>
-			<li><a href="JSAboutMe.html">Home</a></li>
-			<li><a href="JSAboutMe_ImageGallery.html">Good Times</a></li>
+			<li><a href="rallyHome.html">Home</a></li>
+			<li><a href="pastTrips.html">Good Times</a></li>
 			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 		
 		</ul>
