First javascript added! On Good Times, made it so that the pics for each trip changes when you scroll over. Unfortunately this affects the links. I also want to figure out how to have it switch back or cycle through. If i can do that, then I don't have to link it and can just have someone click through a bunch of pictures within each square.

--- a/pastTrips.html
+++ b/pastTrips.html
@@ -32,14 +32,14 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 
 
 	<div id="siteTitle2">
-		<a href="JSAboutMe.html">Rally Away</a>
+		<a href="rallyHome.html">Rally Away</a>
 	</div>
 
 	<nav id="navBar2">
 		<ul>
 			<li><a href="rallyHome.html">Home</a></li>
-			<li class="notHome"><a href="upcomingTrips.html">Let's Get Away</a></li>
-			<li class="notHome"><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
+			<li><a href="upcomingTrips.html">Let's Get Away</a></li>
+			<li><a href="http://instagram.com/rallyaway" target="_blank">Instagram</a></li>
 			
 		</ul>
 	</nav>
@@ -51,43 +51,45 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 	<div id="gallery">
 		<div id="galleryContainer">
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/southwest" target="_blank" class="hvr-ripple-in">
-					<img src="Images/Arches.jpg" class="images">
-				</a> 
-			</div>
+<!-- 				<a href="http://www.rallyaway.com/gallery/southwest" target="_blank" class="hvr-ripple-in">
+ -->					<img  src="Images/Arches.jpg" id="southwest" class="images">
+
+<!-- 				</a> 
+ -->			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/pnw" target="_blank" class="hvr-ripple-in">
-					<img src="Images/Haystack.jpg" class="images"> 
-				</a>
-			</div>
+<!-- 				<a href="http://www.rallyaway.com/gallery/pnw" target="_blank" class="hvr-ripple-in">
+ -->					<img src="Images/Haystack.jpg" id="northwest" class="images"> 
+<!-- 				</a>
+ -->			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/barntime" target="_blank" class="hvr-ripple-in"> 
-					<img src="Images/Barn.jpg" class="images"> 
-				</a>
-			</div>
+<!-- 				<a href="http://www.rallyaway.com/gallery/barntime" target="_blank" class="hvr-ripple-in"> 
+ -->					<img src="Images/Barn.jpg" id="barntime" class="images"> 
+<!-- 				</a>
+ -->			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/9000miles" target="_blank" class="hvr-ripple-in">
-					<img src="Images/WhiteSands.jpg" class="images">
-				</a>
-			</div>
+<!-- 				<a href="http://www.rallyaway.com/gallery/9000miles" target="_blank" class="hvr-ripple-in">
+ -->					<img src="Images/WhiteSands.jpg" id="roadtrip" class="images">
+<!-- 				</a>
+ -->			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/rallybeacon" target="_blank" class="hvr-ripple-in">
-					<img src="Images/Beacon2.jpg" class="images"> 
-				</a>
-			</div>
+<!-- 				<a href="http://www.rallyaway.com/gallery/rallybeacon" target="_blank" class="hvr-ripple-in">
+ -->					<img src="Images/Beacon2.jpg" id="firstRally" class="images"> 
+<!-- 				</a>
+ -->			</div>
 
 			<div class="imageContainer">
-				<a href="http://www.rallyaway.com/gallery/newport16" target="_blank" class="hvr-ripple-in">
-					<img src="Images/Newport.jpg" class="images"> 
-				</a>
-			</div>
+<!-- 				<a href="http://www.rallyaway.com/gallery/newport16" target="_blank" class="hvr-ripple-in">
+ -->					<img src="Images/Newport.jpg" id="newport" class="images"> 
+<!-- 				</a>
+ -->			</div>
 		</div>
 	</div>
 
+	<script type="text/javascript" src="Scripts/pastTripsScript.js"></script>
 
 </body>
 </html>
