--- a/upcomingTrips.html
+++ b/upcomingTrips.html
@@ -29,7 +29,7 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 <body>
 
 	<div id="siteTitle2">
-		<a href="JSAboutMe.html">Rally Away</a>
+		<a href="rallyHome.html">Rally Away</a>
 	</div>
 
 	<nav id="navBar2">
